--- a/breast_cancer_prediction.ipynb
+++ b/breast_cancer_prediction.ipynb
@@ -60,6 +60,7 @@
       },
       "source": [
         "#set kaggle API credentials\n",
+          "#USE YOUR KAGGLE CREDENTIALS FOR THIS\n",
         "import os\n",
         "os.environ['KAGGLE_USERNAME']='krithikaark'\n",
         "os.environ['KAGGLE_KEY']='619a51e793237b101d9c889e20c83886'"
